# cat-vs-dog-project

./: .env  Cargo.toml  README.md
crates/voting-application/: Cargo.toml
crates/voting-application/src/: ports.rs
crates/voting-domain/: Cargo.toml
crates/voting-domain/src/: entities.rs
crates/voting-infrastructure/: Cargo.toml
crates/voting-infrastructure/src/: lib.rs  postgres_adapter.rs  redis_adapter.rs
migrations/: 001_create_votes.sql
services/result-service/: Cargo.toml
services/result-service/src/: main.rs  templates.rs
services/vote-service/: Cargo.toml
services/vote-service/src/: main.rs  templates.rs
services/worker/: Cargo.toml
services/worker/src/: main.rs
