[package]
name = "voting-infrastructure"
version = "0.1.0"
edition = "2021"

[dependencies]
voting-domain = { path = "../../crates/voting-domain" }
voting-application = { path = "../../crates/voting-application" }
sqlx = { version = "0.7", features = ["postgres", "runtime-tokio"] }
redis = { version = "0.24", features = ["tokio-comp"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
async-trait = "0.1"
