[package]
name = "result-service"
version = "0.1.0"
edition = "2021"

[dependencies]
voting-domain = { path = "../../crates/voting-domain" }
voting-application = { path = "../../crates/voting-application" }
voting-infrastructure = { path = "../../crates/voting-infrastructure" }
axum = "0.7"
tokio = { version = "1", features = ["full"] }
tokio-stream = { version = "0.1", features = ["time"] }
futures = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
async-trait = "0.1"
