[package]
name = "vote-service"
version = "0.1.0"
edition = "2021"

[dependencies]
voting-domain = { path = "../../crates/voting-domain" }
voting-application = { path = "../../crates/voting-application" }
voting-infrastructure = { path = "../../crates/voting-infrastructure" }
axum = "0.7"
axum-extra = { version = "0.9", features = ["cookie"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4"] }
async-trait = "0.1"
